fix: adjust score wrappers vertical alignment and prevent label wrapping

--- a/public/styles.css
+++ b/public/styles.css
@@ -1380,6 +1380,7 @@ html[data-theme=dark] .segmented button.active {
     text-transform: uppercase;
     margin-top: 3px;
     font-weight: 600;
+    white-space: nowrap;
 }
 
 .confluence-reasons-container {
